Add churn analysis and top user flow extraction to analysis notebook

--- a/carrots_analysis.ipynb
+++ b/carrots_analysis.ipynb
@@ -721,6 +721,168 @@
     "pkg_counts.to_csv(\"kpi_packages.csv\", index=False)\n",
     "retention_summary.to_csv(\"kpi_retention.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fc54e2cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>flow</th>\n",
+       "      <th>users</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>tool_opened &gt; show_paywalls &gt; skip_paywalls &gt; ...</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>image_generated &gt; press_generate &gt; image_gener...</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>show_paywalls &gt; skip_paywalls &gt; avatar_creatio...</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>payment_initiated &gt; payment_cancelled &gt; skip_p...</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>skip_paywalls &gt; show_paywalls &gt; skip_paywalls ...</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>payment_success &gt; ftue_landmarkt &gt; tool_opened...</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>skip_paywalls &gt; avatar_creation &gt; tool_opened ...</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>show_paywalls &gt; payment_initiated &gt; payment_ca...</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>show_paywalls &gt; skip_paywalls &gt; show_paywalls ...</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>avatar_creation &gt; show_paywalls &gt; skip_paywall...</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  flow  users\n",
+       "262  tool_opened > show_paywalls > skip_paywalls > ...     27\n",
+       "65   image_generated > press_generate > image_gener...     26\n",
+       "195  show_paywalls > skip_paywalls > avatar_creatio...     19\n",
+       "101  payment_initiated > payment_cancelled > skip_p...     17\n",
+       "213  skip_paywalls > show_paywalls > skip_paywalls ...     16\n",
+       "111  payment_success > ftue_landmarkt > tool_opened...     14\n",
+       "208  skip_paywalls > avatar_creation > tool_opened ...     13\n",
+       "190  show_paywalls > payment_initiated > payment_ca...     12\n",
+       "199  show_paywalls > skip_paywalls > show_paywalls ...     12\n",
+       "12   avatar_creation > show_paywalls > skip_paywall...     11"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1) Filter to users who churned (rc_cancellation)\n",
+    "churn_events = user_behaviour[user_behaviour['event_name'] == 'rc_cancellation']\n",
+    "\n",
+    "churn_users = churn_events['revenue_cat_id'].unique()\n",
+    "\n",
+    "# 2) Keep only events for those users, up to and including first rc_cancellation\n",
+    "churn_data = user_behaviour[user_behaviour['revenue_cat_id'].isin(churn_users)].copy()\n",
+    "\n",
+    "# Sort by user + time\n",
+    "churn_data = churn_data.sort_values(['revenue_cat_id', 'event_timestamp'])\n",
+    "\n",
+    "# 3) For each user, truncate at first rc_cancellation\n",
+    "first_cancel_ts = (\n",
+    "    churn_data[churn_data['event_name'] == 'rc_cancellation']\n",
+    "    .groupby('revenue_cat_id')['event_timestamp']\n",
+    "    .min()\n",
+    "    .rename('cancel_ts')\n",
+    ")\n",
+    "\n",
+    "churn_data = churn_data.merge(first_cancel_ts, on='revenue_cat_id', how='left')\n",
+    "churn_data = churn_data[churn_data['event_timestamp'] <= churn_data['cancel_ts']]\n",
+    "\n",
+    "# 4) Build short flows: last 3 events before cancellation + rc_cancellation\n",
+    "def make_flow(events):\n",
+    "    # events is a Series of event_name ordered by timestamp\n",
+    "    # remove consecutive duplicates\n",
+    "    cleaned = []\n",
+    "    prev = None\n",
+    "    for e in events:\n",
+    "        if e != prev:\n",
+    "            cleaned.append(e)\n",
+    "        prev = e\n",
+    "    # take last 4 events (3 before + cancel if present)\n",
+    "    tail = cleaned[-4:]\n",
+    "    return \" > \".join(tail)\n",
+    "\n",
+    "flows = (\n",
+    "    churn_data\n",
+    "    .groupby('revenue_cat_id')['event_name']\n",
+    "    .apply(make_flow)\n",
+    "    .reset_index(name='flow')\n",
+    ")\n",
+    "\n",
+    "# 5) Count users per flow and take top 10\n",
+    "top_flows = (\n",
+    "    flows\n",
+    "    .groupby('flow')['revenue_cat_id']\n",
+    "    .nunique()\n",
+    "    .reset_index(name='users')\n",
+    "    .sort_values('users', ascending=False)\n",
+    "    .head(10)\n",
+    ")\n",
+    "\n",
+    "top_flows\n"
+   ]
   }
  ],
  "metadata": {
