Add churn flow data export to CSV

--- a/carrots_analysis.ipynb
+++ b/carrots_analysis.ipynb
@@ -882,6 +882,16 @@
     "\n",
     "top_flows\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ddfdc50c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_flows.to_csv(\"kpi_churn_flows.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
